tests/fail/ArithRightShift.java
package fail;

import java.lang.System;

public class ArithRightShift {
    public static void main(String[] args) {
        System.out.println(1 >> 'a');
    }
}
